Sat May  7 22:58:00 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_var): no libs argument is given.

Fri May  6 08:08:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c:rb_hash_hash_i() should be static.  [ruby-core:04815]

	* re.c should include regint.h for declarations of oniguruma
	  functions.  [ruby-core:04815]

Sun May  1 09:15:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_sflag): replace '-' in variable names with '_'.
	  [ruby-dev:26107]

	* eval.c (rb_eval), parse.y (arg): reduce fixnum range literal at
	  parser.  fixed: [ruby-dev:26113]

Sat Apr 30 11:59:25 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_FUNC_ATTRIBUTE): check for function attribute.
	  [ruby-dev:26109]

	* eval.c, gc.c: moved noinline to configure.in.

	* rubyio.h (DEPRECATED): moved to configure.in.

	* ruby.h (DEPRECATED, NOINLINE): default definition.

	* win{32,ce}/Makefile.sub (config.h): deprecated and noinline for
	  __declspec() are available for VC++7 or later.

Sat Apr 30 06:57:39 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb: new methods WEBrick::CGI#[], WEBrick::CGI#logger
	  and WEBrick::CGI#config.  these are necessary to use an instance of
	  WEBrick::CGI as the first argument of HTTPServlet#get_instance.
	  (suggested by Tatsuki Sugiura)

	* lib/webrick/cgi.rb
	  (WEBrick::CGI#initalize): set a dummy to @config[:ServerSoftware]
	  if SERVER_SOFTWARE environment variable is not given.
	  (WEBrick::CGI#start): req.path_info must be a String.
	  (WEBrick::CGI::Socket#request_line): treat REQUEST_METHOD, PATH_INFO
	  and SCRIPT_NAME to run in console.

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils.escape_path): should
	  not use String#split("/"). it removes trailing empty path component.

Thu Apr 28 08:21:51 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (set_arg0): use also environment variable space for setting
	  $0.  [ruby-core:04774]
