@@ -1,3 +1,8 @@
+Sun May  8 16:50:25 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
+
+	* lib/profiler.rb: fixed "undefined method `[]' for nil:NilClass"
+	  [ruby-core:4775] [ruby-talk:140401] [ruby-dev:26118]
+
 Sat May  7 22:58:00 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (have_var): no libs argument is given.
